src/test/deca/context/invalid/return/return_only_in_loop_custom.deca
// Description :
// return présent uniquement dans une boucle qui peut ne pas s'exécuter
//
// Resultats :
// Erreur contextuelle
// Ligne 6 : return non garanti

class F {
    int f(boolean b) {
        while (b) {
            return 1;
        }
    }
}
